bk_ida/gobmkida/g1/do_atari_atari
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1237:1: error: use of undeclared identifier 'current_minsize'
current_minsize = minsize; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1238:1: error: use of undeclared identifier 'current_attacks'
current_attacks = attacks; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1239:46: error: use of undeclared identifier 'conditional_attack_point'
memset( conditional_attack_point, 0, sizeof( conditional_attack_point)); 
                                             ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1239:9: error: use of undeclared identifier 'conditional_attack_point'
memset( conditional_attack_point, 0, sizeof( conditional_attack_point)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1261:34: error: use of undeclared identifier 'target_comp_func'
gg_sort( v17->target, v21, 4uLL, target_comp_func); 
                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1264:31: error: use of undeclared identifier 'move_comp_func'
gg_sort( attacks, j, 0x14uLL, move_comp_func); 
                              ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1283:25: error: use of undeclared identifier 'pdfa'
p_last_index = ( int *)&pdfa.name[70]; 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1284:22: error: use of undeclared identifier 'pdfa'
gprintf( "%o%s%1m", &pdfa.name[70], v53); 
                     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1288:17: error: use of undeclared identifier 'pdfa'
p_last_index = &pdfa.last_index; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/engine/combination.c:1289:22: error: use of undeclared identifier 'pdfa'
gprintf( "%o%s%1m", &pdfa.last_index, v53); 
                     ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_atari_atari/src/obj/1/combination.o] Error 1
